--- a/app/webroot/css/profile.css
+++ b/app/webroot/css/profile.css
@@ -52,7 +52,7 @@ h3 rt {
 }
 section {
 	background: #fff;
-	padding: 0 0 154px;
+	padding: 0 0 164px;
 }
 section.second {
 	background: #4cbdce;
@@ -71,19 +71,25 @@ section .wrapper {
 	width: 978px;
 	margin: 0 auto;
 }
-.left, .center, .right {
+#profileMain{
+	width: 810px;
+	float: right;
+}
+.left, .center {
 	float: left;
 }
 .left {
-	width: 222px;
-	height: 222px;
+	width: 168px;
+	height: 168px;
 }
 .center {
-	width: 558px;
+	width: 390px;
 	margin-left: 30px;
+	margin-top: 50px;
 }
 .right {
 	width: 168px;
+	float: right;
 }
 .right .social {
 	width: 168px;
@@ -99,6 +105,36 @@ section .wrapper {
 	color: #45acbb;
 	padding-top: 8px;
 }
+
+#profileDetails{
+	margin-top: 30px;
+	width: 810px;
+	margin-left: 168px;
+}
+
+#profileDetails li{
+	font-size: 20px;
+	color: #45acbb;
+	margin-bottom: 12px;
+	width: 642px;
+}
+
+#profileDetails li:nth-child(5){
+	margin-bottom: 40px;
+}
+
+#profileDetails li:last-child{
+	margin-bottom: 0;
+}
+
+.itemName{
+	width: 155px;
+	display: inline-block;
+}
+.itemDetails{
+	margin-left: 16px;
+}
+
 table {
 	width: 978px;
 	margin: 40px auto 0;
@@ -132,11 +168,11 @@ td {
 	font-weight: bold;
 	font-size: 14px;
 	text-align: center;
-	margin-bottom: 120px;
+	margin-bottom: 66px;
 }
 #ImgUpForm {
-	width: 222px;
-	height: 222px;
+	width: 168px;
+	height: 168px;
 	overflow: hidden;
 	position: relative;
 }
@@ -148,11 +184,11 @@ td {
 	left: 0;
 }
 #ImgUpForm ul {
-	width: 222px;
+	width: 168px;
 }
 #ImgUpForm li {
-	width: 110px;
-	height: 40px;
+	width: 83px;
+	height: 34px;
 	float: left;
 	background: rgba(0,0,0,0.7);
 	overflow: hidden;
@@ -165,12 +201,12 @@ td {
 #ImgUpForm li a {
 	color: #fff;
 	text-decoration: none;
-	font-size: 12px;
+	font-size: 9px;
 	display: block;
-	width: 111px;
+	width: 84px;
 	text-align: center;
 	height: 100%;
-	padding-top: 10px;
+	padding-top: 12px;
 }
 #ImgUpForm li a:hover {
 	opacity: 0.75;
