私も教えて欲しいのタグ付け作成

--- a/app/webroot/css/seminars.css
+++ b/app/webroot/css/seminars.css
@@ -38,6 +38,37 @@ section {
 section .wrapper {
     width: 642px;
     margin: 0 auto;
+    position: relative;
+}
+.teachmetag {
+    position: absolute;
+    height: 56px;
+    top: -80px;
+    left: 0;
+}
+.teachmetag img {
+    position: relative;
+    float: left;
+    z-index: 2;
+}
+.teachmetag h4 {
+    position: relative;
+    margin-top: 5px;
+    line-height: 30px;
+    margin-left: -10px;
+    padding: 2px 7px 0 15px;
+    float: left;
+    background: #fd865b;
+    border: 1px #fff solid;
+    color: #fff;
+    font-size: 16px;
+    font-weight: normal;
+    z-index: 1;
+    border-radius: 0.4em;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: calc(100% - 50px);
 }
 dt {
     font-size: 16px;
