プロフィール表示が見づらかったのを修正

--- a/app/webroot/css/profile.css
+++ b/app/webroot/css/profile.css
@@ -117,6 +117,15 @@ section .wrapper {
 	color: #45acbb;
 	margin-bottom: 12px;
 	width: 642px;
+	*zoom: 1;
+}
+#profileDetails li:after{
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
 }
 
 #profileDetails li:nth-child(5){
@@ -130,9 +139,17 @@ section .wrapper {
 .itemName{
 	width: 155px;
 	display: inline-block;
+	float: left;
+}
+.itemCol {
+	display: inline-block;
+	float: left;
 }
 .itemDetails{
+	width: 460px;
 	margin-left: 16px;
+	display: inline-block;
+	float: left;
 }
 
 table {
