--- a/app/webroot/css/common.css
+++ b/app/webroot/css/common.css
@@ -268,7 +268,7 @@ header {
 
 
 #hNav ul {
-    margin: 0;
+    margin: 2px 0 0 0;
 }
 
 
@@ -286,13 +286,26 @@ header {
 
 .hNavst1 img {
     width: 138px;
-    height: 54px;
+    height: 50px;
 }
 
 
 .hNavst2 img {
     width: 54px;
-    height: 54px;
+    height: 50px;
+}
+
+.hNavMyprof{
+    width: 54px;
+    height: 50px;
+    padding: 4px 6px;
+    box-sizing: border-box;
+    border: solid 1px #ffb425;
+}
+
+.hNavMyprof img{
+    width: 40px;
+    height: 40px;
 }
 
 
