--- a/app/webroot/css/common.css
+++ b/app/webroot/css/common.css
@@ -236,14 +236,14 @@ article,section,div,span,h1,h2,h3,h4,h5,h6,p {
 header {
     display: block;
     width: 100%;
-    height: 110px;
+    height: 68px;
     background: #fff;
 }
 
 
 #headerContent {
-    height: 80px;
-    padding: 30px 0 0 0;
+    height: 68px;
+    padding: 0px 0 0 0;
 }
 
 
@@ -256,8 +256,9 @@ header {
 
 
 #logo img {
-    width: 222px;
-    margin: 0;
+    width: 143px;
+    height: 38px;
+    margin: 16px 0 0 0;
     padding: 0;
 }
 
@@ -268,45 +269,93 @@ header {
 
 
 #hNav ul {
-    margin: 2px 0 0 0;
+    margin: 0 0 0 0;
 }
 
 
 #hNav ul li {
     float: left;
-    margin-left: 30px;
+    padding-right: 20px;
+    padding-left: 20px;
     list-style: none;
+    color: #f5ac25;
+    font-size: 14px;
+}
+
+
+#hNav ul  li a {
+    text-decoration: none;
+    color: #f5ac25;
 }
 
 
 #hNav ul  li a:hover {
-    opacity: .7;
+}
+
+
+.hNavst1{
+    padding-top: 26px;
+    padding-bottom: 23px;
+}
+
+
+.hNavst1:hover{
+    background: #f5f5f5;
 }
 
 
 .hNavst1 img {
     width: 138px;
     height: 50px;
+    background: #000;
+}
+
+
+.hNavst2 {
+}
+
+
+.hNavst2:hover {
+    background: #f5f5f5;
 }
 
 
 .hNavst2 img {
-    width: 54px;
-    height: 50px;
+    width: 26px;
+    height: 30px;
+    padding-top: 20px;
+    padding-bottom: 18px;
 }
 
-.hNavMyprof{
-    width: 54px;
-    height: 50px;
-    padding: 4px 6px;
+
+.hNavMyprof {
+    height: 68px;
+    padding-top: 14px;
     box-sizing: border-box;
-    border: solid 1px #ffb425;
+    background: #e1a32a;
 }
+
+
+.hNavMyprof a{
+    float: left;
+}
+
 
 .hNavMyprof img{
     width: 40px;
     height: 40px;
+    margin-right: 20px;
 }
+
+
+.hNavMyprof span{
+    float: left;
+    color: #fff;
+    margin-top: 14px;
+    line-height: 1;
+}
+
+
 
 
 
