--- a/app/webroot/css/common.css
+++ b/app/webroot/css/common.css
@@ -275,8 +275,6 @@ header {
 
 #hNav ul li {
     float: left;
-    padding-right: 20px;
-    padding-left: 20px;
     list-style: none;
     color: #f5ac25;
     font-size: 14px;
@@ -294,8 +292,14 @@ header {
 
 
 .hNavst1{
+}
+
+.hNavst1 a{
+    padding-right: 20px;
+    padding-left: 20px;
     padding-top: 26px;
     padding-bottom: 23px;
+    display: block;
 }
 
 
@@ -311,7 +315,9 @@ header {
 }
 
 
-.hNavst2 {
+.hNavst2 a{
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 
@@ -333,6 +339,8 @@ header {
     padding-top: 14px;
     box-sizing: border-box;
     background: #e1a32a;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 
