--- a/app/webroot/css/common.css
+++ b/app/webroot/css/common.css
@@ -320,8 +320,10 @@ header {
     padding-right: 20px;
     padding-left: 20px;
     padding-top: 20px;
-    padding-bottom: 13px;
+    padding-bottom: 18px;
     display: block;
+    box-sizing: border-box;
+    height: 68px;
 }
 
 
@@ -347,6 +349,10 @@ header {
     padding-left: 20px;
     padding-bottom: 54px;
     display: block;
+}
+
+.hNavMyprof a:hover{
+    background: #47B4C0;
 }
 
 
